[tool.poetry]
name = "contextvars-registry"
version = "0.3.0"
description = "Contextvars made easy (WARNING: unstable alpha version. Things may break)."
license = "MIT"
authors = ["Dmitry Vasilyanov <vdmit11@gmail.com>"]
readme = "README.rst"
repository = "https://github.com/vdmit11/contextvars-registry"
documentation = "https://contextvars-registry.readthedocs.io"
keywords = ["contextvars", "context", "async", "threading", "gevent"]
exclude = []
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",  
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
]


[tool.poetry.dependencies]
python = "^3.8.10"
sentinel-value = "^1.0.0"

[tool.poetry.group.dev.dependencies]
Flask = {extras = ["async"], version = "^3.0.2"}
Sphinx = "^7.1.2"
gevent = "^24.2.1"
mypy = "^1.9.0"
pytest = "^8.1.1"
pytest-cov = "^4.1.0"
python-semantic-release = "^9.2.0"
pytz = "^2024.1"
radon = "6.0.1"
ruff = "^0.3.3"
sphinx-copybutton = "^0.5.2"
sphinx-rtd-theme = "^2.0.0"
tox = "^4.14.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100

[tool.semantic_release]
version_toml = ["pyproject.toml:tool.poetry.version"]
upload_to_pypi = true
upload_to_release = true
build_command = "poetry build"
major_on_zero = false

[tool.pytest.ini_options]
norecursedirs = "build dist .tox"
addopts = """
    --maxfail=2
    --doctest-modules
    --doctest-glob='*.rst'
    --cov-report=term-missing:skip-covered
    --ignore='./playground.py'
    --ignore-glob='**/.*.py'
    --ignore-glob='.*.py'
    -W ignore::DeprecationWarning
"""

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if 0:",
    "raise AssertionError",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
    "@overload",
]

[tool.mypy]
python_version = 3.8
show_error_codes = true
# Enable some strict checks. It is like `mypy --strict`,
# except for several options that bring too little benefit
# and take too much effort to implement on this project.
warn_unused_configs = true
disallow_subclassing_any = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
no_implicit_reexport = true
strict_equality = true
